# OGLOG-Demo

./: .gitignore
Demo/: CMakeLists.txt  asset_tool.cpp  assets.sdb  main.cpp
Demo/app/: scene_init.cpp  scene_init.h  scene_system.cpp  scene_system.h
Demo/app/components/: character_mood_component.h  paralax_component.h
Demo/app/scenes/: game_setup.h  menu_setup.h  scene_setup.h
Demo/app/systems/: paralax_system.cpp
Demo/assets/font/Decrypt/: Inter_atlas_64.sdfd  Roboto_atlas_64.sdfd  ScienceGothic_atlas_64.sdfd
Demo/assets/font/Inter/: output_font_64.sdfd
Demo/assets/font/ScienceGothic/: output_font_64.sdfd
Demo/assets/shader/font/: fragment.glsl  vertex.glsl
Demo/assets/shader/sprite/: fragment.glsl  vertex.glsl
Demo/src/: config_component.h  config_render.h  config_system.h  engine.cpp  engine.h  engine_variables.h  shader.cpp  shader.h
Demo/src/logic/: scene.h  scene_manager.cpp  scene_manager.h  system_manager.cpp  system_manager.h
Demo/src/logic/components/: button_component.h  canvas_component.h  mesh_renderer_component.h  text_component.cpp  text_component.h  transform_component.h  ui_element.h
Demo/src/logic/systems/: button_system.cpp  button_system.h  canvas_system.cpp  canvas_system.h  renderer_system.cpp  renderer_system.h  system.cpp  system.h  transform_system.cpp  transform_system.h
Demo/src/materials/: material.cpp  material.h  material_default.cpp  material_default.h  material_font.cpp  material_font.h
Demo/src/misc/: colors.cpp  colors.h
Demo/src/service/: asset_manager.cpp  asset_manager.h  shader_manager.cpp  shader_manager.h
Demo/src/util/: font.cpp  font.h  mesh.cpp  mesh.h  string_operations.h  texture.cpp  texture.h  time.cpp  time.h
FontGen/: CMakeLists.txt
FontGen/src/: ByteReading.h  FileParser.cpp  FileParser.h  GlyphData.cpp  GlyphData.h  Visual.h  main.cpp  mathf.h
